# zokrates-sprout

./: Cargo.toml  Dockerfile  README.org  build.rs
.github/workflows/: rust.yml
proto/: vm_runtime.proto
src/: compute_witness.rs  generate_proof.rs  lib.rs  main.rs  utils.rs
tests/: abi.json  generate_proof.rs  proving.key
