[package]
name = "zokrates"
version = "0.1.0"
edition = "2021"

[env]
PROTOC = "$(which protoc-c)"

[dependencies]
tokio = {version="1", features= ["full"]}
prost = "0.12"
tonic-reflection = "0.11"	# for dev
tonic = "0.11"
hex = "0.4"
flate2 = "1"
lazy_static = "1.5"

# zokrates stuff
zokrates_core = { version = "0.7", git = "https://github.com/Zokrates/ZoKrates", workspace = "zokrates_core", default-features = false }
zokrates_ast = { version = "0.1", git = "https://github.com/Zokrates/ZoKrates", workspace = "zokrates_ast", default-features = false }
zokrates_field = { version = "0.5", git = "https://github.com/Zokrates/ZoKrates", workspace = "zokrates_field", default-features = false }
zokrates_interpreter = { version = "0.1", git = "https://github.com/Zokrates/ZoKrates", workspace = "zokrates_interpreter",default-features = false }
zokrates_fs_resolver = { version = "0.5", git = "https://github.com/Zokrates/ZoKrates", workspace="zokrates_fs_resolver" }
zokrates_circom = { version = "0.1", git = "https://github.com/Zokrates/ZoKrates", workspace="zokrates_circom" }
zokrates_proof_systems = { version = "0.1", git = "https://github.com/Zokrates/ZoKrates", workspace = "zokrates_proof", default-features = false }
zokrates_ark = { version = "0.1", git = "https://github.com/Zokrates/ZoKrates", workspace = "zokrates_ark", default-features = false }
zokrates_common = { version = "0.1", git = "https://github.com/Zokrates/ZoKrates", workspace = "zokrates_common", default-features = false }


log = "0.4"
rand = "0.8"
serde_json = "1"
env_logger = "0.11"
alloy-json-abi = "0.7"
alloy = "0.2"
alloy-primitives = "0.7"
alloy-sol-types = "0.7"
alloy-contract = "0.2.1"
alloy-dyn-abi = "0.7.7"
ruint = "1.12.3"

[build-dependencies]
tonic-build = "0.11"
